add tags to all of the poats

--- a/_posts/2015-12-05-codis.md
+++ b/_posts/2015-12-05-codis.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Codis 基础
-categories: linux
+categories: linux go codis nosql zookeeper cluster
 excerpt: follow me
 comments: true
 ---
