add wc and excerpt to index

--- a/_posts/2015-12-22-elk-basic.md
+++ b/_posts/2015-12-22-elk-basic.md
@@ -2,7 +2,8 @@
 layout: post
 title:  ELK 搭建
 categories: linux logstash elasticsearch kibana
-excerpt:  ELK 的安装与基础
+wc: 770 2460 28047
+excerpt:  ELK(Elasticsearch,Logstash,Kibana) 的安装与基础
 comments: true
 ---
 
