--- a/_posts/2015-12-05-codis.md
+++ b/_posts/2015-12-05-codis.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 title: Codis 基础
-categories: linux go codis nosql zookeeper cluster
+categories: linux go nosql codis zookeeper cluster
 wc: 1512 5050 52832
-excerpt: follow me
+excerpt: go、codis的安装，codis与zookeeper配合构建集群，配置与slot操作，数据迁移，dashboard操作
 comments: true
 ---
 
