modify the title format

--- a/_posts/2015-12-22-elk-basic.md
+++ b/_posts/2015-12-22-elk-basic.md
@@ -39,7 +39,7 @@ comments: true
 
 ---
 
-##依赖
+## 依赖
 
 
 * **Elasticsearch** requires at least **Java 7**
@@ -54,7 +54,7 @@ comments: true
 
 ---
 
-###检查java版本
+### 检查java版本
 
 {% highlight bash %}
 [root@h102 ELK]# java -version
@@ -69,11 +69,11 @@ OpenJDK 64-Bit Server VM (build 24.65-b04, mixed mode)
 
 ---
 
-##下载
+## 下载
 
 elastic 所有软件的 **[下载地址][dl]**
 
-###创建仓库
+### 创建仓库
 
 {% highlight bash %}
 [root@h102 ELK]# vim /etc/yum.repos.d/elk.repo 
@@ -95,7 +95,7 @@ enabled=1
 
 ---
 
-###导入GPG校验密钥
+### 导入GPG校验密钥
 
 {% highlight bash %}
 [root@h102 ELK]# wget  https://packages.elastic.co/GPG-KEY-elasticsearch
@@ -118,7 +118,7 @@ Saving to: “GPG-KEY-elasticsearch”
 
 ---
 
-###下载软件 
+### 下载软件 
 
 {% highlight bash %}
 [root@h102 ELK]# yumdownloader elasticsearch logstash 
@@ -147,7 +147,7 @@ Saving to: “kibana-4.3.1-linux-x64.tar.gz”
 
 ---
 
-###进行校验
+### 进行校验
 
 {% highlight bash %}
 [root@h102 ELK]# sha1sum * 
@@ -162,9 +162,9 @@ a72ccab73566e52e61d6dcedf14c14e10257b243  logstash-2.1.1-1.noarch.rpm
 
 ---
 
-##安装
+## 安装
 
-###安装elasticsearch
+### 安装elasticsearch
 
 
 {% highlight bash %}
@@ -205,7 +205,7 @@ shards disk.indices disk.used disk.avail disk.total disk.percent host      ip   
 
 ---
 
-###安装kibana
+### 安装kibana
 
 准确来说，只用解压就可以了
 
@@ -285,7 +285,7 @@ config/
 
 ---
 
-####开启防火墙
+#### 开启防火墙
 
 {% highlight bash %}
 [root@h102 ~]# grep 5601 /etc/sysconfig/iptables
@@ -309,7 +309,7 @@ iptables: Trying to reload firewall rules:                 [  OK  ]
 
 ---
 
-###安装logstash
+### 安装logstash
 
 
 {% highlight bash %}
@@ -352,7 +352,7 @@ drwxr-xr-x 4 logstash logstash  4096 Dec 22 20:25 vendor
 
 ---
 
-##logstash的简单测试
+## logstash的简单测试
 
 {% highlight bash %}
 [root@h102 ELK]# /opt/logstash/bin/logstash -e 'input { stdin { } } output { stdout {} }'
@@ -387,7 +387,7 @@ root     34356  0.0  0.0 103256   828 pts/2    S+   20:32   0:00          \_ gre
 
 ---
 
-##logstash的配置文件
+## logstash的配置文件
 
 {% highlight bash %}
 [root@h102 etc]# vim logstash-simple.conf
@@ -451,7 +451,7 @@ hello example
 > **Tip:** A Logstash pipeline has two required elements, **input** and **output** , and one optional element, **filter** . The input plugins consume data from a source, the filter plugins modify the data as you specify, and the output plugins write the data to a destination.
 
 
-###退出运行
+### 退出运行
 
 使用 **`Ctrl+C`** 退出 **logstash**
 
@@ -478,7 +478,7 @@ Logstash shutdown completed
 
 ---
 
-##数据存到Elasticsearch
+## 数据存到Elasticsearch
 
 
 {% highlight bash %}
@@ -593,7 +593,7 @@ stdout {codec=>rubydebug}
 
 ---
 
-##从文件获取数据
+## 从文件获取数据
 
 
 生产环境中不太可能手动生成日志(使用人肉输入到stdin的方式)，而更多是从一个源日志文件那里读取
@@ -722,7 +722,7 @@ def
 
 ---
 
-#命令总结
+# 命令汇总
 
 * **`java -version`**
 * **`cat /etc/yum.repos.d/elk.repo`**
