modified:   _posts/2016-02-27-mycat-ops.md

--- a/_posts/2016-02-27-mycat-ops.md
+++ b/_posts/2016-02-27-mycat-ops.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  Mycat 运行
+title:  Mycat 运行与基础操作
 categories:  linux mysql mycat
 wc: 884  2899 25391 
-excerpt: mycat的分片配置，日志监控，启动，连接，创建表，数据增删查改，表结构修改与注意事项  
+excerpt: mycat的分片配置，日志查看，启动，连接，创建表，数据增删查改，表结构修改与注意事项  
 comments: true
 ---
 
