change style and view

--- a/_posts/2015-12-22-elk-basic.md
+++ b/_posts/2015-12-22-elk-basic.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title:  ELK 搭建
+author: wilmosfang
 categories: linux logstash elasticsearch kibana
 wc: 770 2460 28047
 excerpt:  ELK(Elasticsearch,Logstash,Kibana) 的安装与基础
