--- a/_posts/2016-02-23-kvm-basic.md
+++ b/_posts/2016-02-23-kvm-basic.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title:  KVM基础
+author: wilmosfang
 categories:  linux kvm
 wc: 560  1931 18992 
 excerpt:  KVM的环境要求与安装，网桥的创建与配置，虚拟的创建与配置，Centos7的网络配置，Centos7当前和默认运行级别的修改方法及各种注意事项
