--- a/_posts/2017-01-04-c-filestat-01.md
+++ b/_posts/2017-01-04-c-filestat-01.md
@@ -253,7 +253,7 @@ struct dirent
     __ino64_t d_ino; 
     __off64_t d_off;
 #endif
-    unsigned short int d_reclen; //文件名长度 ,length of this d_name
+    unsigned short int d_reclen;  
     unsigned char d_type; //文件类型, the type of d_name
     char d_name[256];           /* We must not include limits.h! */ //文件名，最长255字符 file name (null-terminated) 
   };
