--- a/_posts/2017-01-12-c-ipc-fifo.md
+++ b/_posts/2017-01-12-c-ipc-fifo.md
@@ -19,7 +19,7 @@ comments: true
 
 * 无名管道 ( pipe )
 * 有名管道 ( fifo )
-* 信号 ( sinal )
+* 信号 ( signal )
 * 信号量( semophore )
 * 共享内存( shared memory )
 * 套接字( socket )
