--- a/_posts/2017-01-10-c-ipc-pipe.md
+++ b/_posts/2017-01-10-c-ipc-pipe.md
@@ -19,7 +19,7 @@ comments: true
 
 * 无名管道 ( pipe )
 * 有名管道 ( fifo )
-* 信号 ( singal )
+* 信号 ( signal )
 * 信号量( semaphore )
 * 共享内存( shared memory )
 * 套接字( socket )
