--- a/_posts/2015-11-13-fio-basic.md
+++ b/_posts/2015-11-13-fio-basic.md
@@ -2,8 +2,8 @@
 layout: post
 title: fio基础
 author: wilmosfang
-tags:  benchmark
-categories:  benchmark
+tags:  benchmark fio
+categories:  fio
 wc: 2765 17131 115205
 excerpt: follow me
 comments: true
