--- a/_posts/2015-11-17-nc-basic.md
+++ b/_posts/2015-11-17-nc-basic.md
@@ -2,8 +2,8 @@
 layout: post
 title: nc基础用法
 author: wilmosfang
-tags:  admintools
-categories:  admintools
+tags:  admintools nc
+categories:  nc
 wc: 572 2015 21917
 excerpt: follow me
 comments: true
