--- a/_posts/2016-04-20-neo4j-basic.md
+++ b/_posts/2016-04-20-neo4j-basic.md
@@ -2,7 +2,7 @@
 layout: post
 title:  Neo4j 基础
 author: wilmosfang
-categories:   nosql neo4j 
+categories:   neo4j 
 tags:   nosql neo4j 
 wc: 279   534 11007 
 excerpt: neo4j 的作用，环境需求，下载安装，运行和访问  
