--- a/_posts/2016-06-21-ssdb-info.md
+++ b/_posts/2016-06-21-ssdb-info.md
@@ -3,7 +3,7 @@ layout: post
 title:  SSDB 状态详解
 author: wilmosfang
 tags:   nosql ssdb 
-categories:   nosql 
+categories:   ssdb 
 wc: 751  2014 18372 
 excerpt: ssdb 的下载，安装，启动，连接，info，info cmd，状态详解
 comments: true
