--- a/_posts/2015-12-05-codis.md
+++ b/_posts/2015-12-05-codis.md
@@ -3,7 +3,7 @@ layout: post
 title: Codis 基础
 author: wilmosfang
 tags:  go nosql codis zookeeper cluster
-categories:  go nosql codis zookeeper cluster
+categories:  codis 
 wc: 1512 5050 52832
 excerpt: go、codis的安装，codis与zookeeper配合构建集群，配置与slot操作，数据迁移，dashboard操作
 comments: true
