--- a/_posts/2016-02-27-mycat-ops.md
+++ b/_posts/2016-02-27-mycat-ops.md
@@ -3,7 +3,7 @@ layout: post
 title:  Mycat 运行与基础操作
 author: wilmosfang
 tags:   mysql mycat
-categories:   mysql mycat
+categories:   mycat
 wc: 885  2906 25450
 excerpt: mycat的分片配置，日志查看，启动，连接，创建表，数据增删查改，表结构修改与注意事项  
 comments: true
