--- a/_posts/2016-02-29-mycat-web.md
+++ b/_posts/2016-02-29-mycat-web.md
@@ -2,7 +2,7 @@
 layout: post
 title:  Mycat web 基础
 author: wilmosfang
-categories:   mysql mycat zookeeper 
+categories:   mycat 
 tags:   mysql mycat zookeeper 
 wc: 322  687 9700 
 excerpt: mycat的环境依赖，zookeeper的安装配置运行，mycat的下载安装启动和访问，web界面的主要功能   
