--- a/_posts/2017-03-14-arm-01-led-beep.md
+++ b/_posts/2017-03-14-arm-01-led-beep.md
@@ -14,7 +14,7 @@ comments: true
 
 **[ARM][arm]** 处理器是英国Acorn有限公司设计的低功耗低成本的一款RISC微处理器
 
-> **RISC** 全称为 **Acorn RISC Machine**
+> **ARM** 全称为 **Acorn RISC Machine**
 
 目前市面上的CPU有两大类别
 
