add led and buzzer png

--- a/_posts/2017-03-14-arm-01-led-beep.md
+++ b/_posts/2017-03-14-arm-01-led-beep.md
@@ -246,4 +246,16 @@ void CtrlLED(void) //CtrlLED函数定义
 灯全亮，蜂鸣器也响了
 
 
+---
+
+# 附
+
+## LED电路图
+
+![led.png](/images/tq2440/led.png)
+
+## 蜂鸣器电路图
+
+![buzzer.png](/images/tq2440/buzzer.png)
+
 [arm]:http://www.arm.com/
