add modify of led

--- a/_posts/2017-03-14-arm-01-led-beep.md
+++ b/_posts/2017-03-14-arm-01-led-beep.md
@@ -5,7 +5,7 @@ author:  wilmosfang
 tags:   arm c
 categories:  arm
 wc:  252  386 7825 
-excerpt:  ARM裸机开发、平台环境与工具、创建项目、lED与蜂鸣器
+excerpt:  ARM裸机开发、平台环境与工具、创建项目、LED与蜂鸣器
 comments: true
 ---
 
@@ -170,7 +170,7 @@ comments: true
     
 
 	AREA    RESET, CODE, READONLY
-	;AREA 伪指令用于定义一个代表段或数据段，ARM汇编程序设计采用分段式设计，一个ARM源程序至少需要一个代码段，大的程序可以包含多个代码段及数据段
+	;AREA 伪指令用于定义一个代码段或数据段，ARM汇编程序设计采用分段式设计，一个ARM源程序至少需要一个代码段，大的程序可以包含多个代码段及数据段
 	;RESET 是代码段或数据段的名称
 	;CODE 定义为代码段
 	;READONLY 指定本段为只读，代码段的默认属性为只读
