change the demo pic

--- a/_posts/2017-03-24-arm-10-rtc-tick.md
+++ b/_posts/2017-03-24-arm-10-rtc-tick.md
@@ -4,7 +4,7 @@ title:  ARM(十).RTC and TICK
 author:  wilmosfang
 tags:   arm c
 categories:  arm
-wc: 1750 7992 82052
+wc: 1750 7992 82063
 excerpt:  ARM裸机开发、实时时钟与节拍器
 comments: true
 ---
@@ -87,7 +87,7 @@ comments: true
 ### 代码示例
 
 
-**`rtc.s`**
+**`rtc_tick.s`**
 
 这是主汇编程序,定义了中断向量表,进行了各种初始化
 
@@ -482,7 +482,7 @@ int main()
 
 开发板会从 20120425143027 开始每秒打印一条当前时间到串口中，并且每隔一秒钟蜂鸣器会持续响一秒
 
-![alarm.png](/images/rtc/alarm.png)
+![rtc_tick.png](/images/rtc/rtc_tick.png)
 
 
 ---
