--- a/_posts/2017-03-26-arm-13-wtd.md
+++ b/_posts/2017-03-26-arm-13-wtd.md
@@ -402,6 +402,12 @@ int main()
 
 编译执行过程中没有报错，从结果来看，符合预期
 
+运行效果是蜂鸣器会一直响,LED灯也会常亮
+
+如果注释掉 `main.c` 中的 **`rWTCNT   = 50625;       //喂狗,如果不喂狗,超时就会复位`** 这一句,再次运行
+
+一小会儿后蜂鸣器就会停响, LED 灯也会熄灭
+
 
 
 ---
