change the url ref

--- a/_posts/2016-06-21-ssdb-info.md
+++ b/_posts/2016-06-21-ssdb-info.md
@@ -747,5 +747,5 @@ ssdb 127.0.0.1:8888>
 
 
 [ssdb]:http://ssdb.io/zh_cn/
-[ssdb_basic]:http://soft.dog/2015/11/25/SSDB-basic/
+[ssdb_basic]:/2015/11/25/SSDB-basic/
 [cli]:http://ssdb.io/docs/zh_cn/ssdb-cli.html
