--- a/_posts/2016-12-26-c-stdio-02.md
+++ b/_posts/2016-12-26-c-stdio-02.md
@@ -173,6 +173,6 @@ emacs@ubuntu:~/c$
 
 
 
-[c_stdio_01]:http://soft.dog/2016/12/26/c-stdio-01/
+[c_stdio_01]:/2016/12/26/c-stdio-01/
 [linux_c_api]:http://www.kancloud.cn/wizardforcel/linux-c-api-ref/98469
 
