--- a/_posts/2017-02-12-c-sqlite3.md
+++ b/_posts/2017-02-12-c-sqlite3.md
@@ -744,7 +744,7 @@ extern int sprintf (char *__restrict __s,
 通过各方面资料弄懂其参数的意义和返回值的类型，是熟练掌握的基础
 
 [sqlite]:http://www.sqlite.org/
-[sqlite_basic]:http://soft.dog/2016/03/15/sqlite-basic/
+[sqlite_basic]:/2016/03/15/sqlite-basic/
 [intro]:http://www.sqlite.org/c3ref/intro.html
 [funclist]:http://www.sqlite.org/c3ref/funclist.html
 [rescode]:http://www.sqlite.org/rescode.html
