--- a/_posts/2016-12-30-c-stdio-03.md
+++ b/_posts/2016-12-30-c-stdio-03.md
@@ -272,6 +272,6 @@ emacs@ubuntu:~/file$
 通过各方面资料弄懂其参数的意义和返回值的类型，是熟练掌握的基础
 
 
-[c_stdio_01]:http://soft.dog/2016/12/26/c-stdio-01/
+[c_stdio_01]:/2016/12/26/c-stdio-01/
 [linux_c_api]:http://www.kancloud.cn/wizardforcel/linux-c-api-ref/98469
 
