--- a/_posts/2017-07-30-chroot.md
+++ b/_posts/2017-07-30-chroot.md
@@ -2,8 +2,8 @@
 layout:  post
 title:  构建 chroot 监狱
 author:  wilmosfang
-tags:  chroot
-categories:  chroot 
+tags: linux  chroot
+categories:  linux 
 wc: 330 942 9055
 excerpt:  在 Centos7 中构建 chroot 监狱
 comments: true
