change categories to linux

--- a/_posts/2015-11-13-fio-basic.md
+++ b/_posts/2015-11-13-fio-basic.md
@@ -2,10 +2,10 @@
 layout: post
 title: fio基础
 author: wilmosfang
-tags:  benchmark fio
-categories:  fio
+tags: linux  benchmark fio
+categories:  linux
 wc: 2768 17107 115008
-excerpt: follow me
+excerpt: 使用 fio 进行磁盘的 io 测试
 comments: true
 ---
 
