--- a/_posts/2015-11-17-nc-basic.md
+++ b/_posts/2015-11-17-nc-basic.md
@@ -2,15 +2,14 @@
 layout: post
 title: nc基础用法
 author: wilmosfang
-tags:  admintools nc
-categories:  nc
+tags:  admintools nc linux
+categories:  linux
 wc: 575 1962 21497
-excerpt: follow me
+excerpt: nc 的安装，端口扫描，打开一个会话连接，文件传输，server端发文件，server端收文件，压缩打包发送，加密传输，远程克隆，远程控制，指定源端口，指定源地址
 comments: true
 ---
 
 
----
 
 # 前言
 
